i18n/ja/docusaurus-plugin-content-docs/version-0.1.x/keybindings.md
---
sidebar_position: 4
---

# キーバインディングリファレンス

このページでは、Gittiで利用可能なすべてのキーバインディングをコンテキストとシナリオ別に整理して記載しています。

## 凡例

- **`*`** = グローバルキーバインディング（ポップアップが開いていない時、すべてのコンテキストで機能）
- **`* [!!]`** = グローバルキーバインディングで**ポップアップが開いている時でも機能**

## グローバルキーバインディング

| キー | マーカー | アクション | 備考 |
| :--- | :--- | :--- | :--- |
| `ctrl+c` | `* [!!]` | Gittiを終了 | 強制終了、ポップアップ内でも機能 |
| `ctrl+s` | `* [!!]` | すべてのファイルをステージ | 変更されたすべてのファイルをステージ |
| `ctrl+u` | `* [!!]` | すべてのファイルをアンステージ | ステージされたすべてのファイルをアンステージ |
| `ctrl+g` | `* [!!]` | 作者のGitHubを開く | ブラウザで作者のGitHubを開く |
| `ctrl+l` | `* [!!]` | 作者のLinkedInを開く | ブラウザで作者のLinkedInを開く |
| `q` または `Q` | `*` | Gittiを終了 | ポップアップが開いていない時のみ機能 |
| `?` | `*` | グローバルキーバインディングヘルプを開く | ポップアップですべてのキーバインディングを表示 |

## コンポーネントナビゲーション

| キー | アクション | 備考 |
| :--- | :--- | :--- |
| `1` | ローカルブランチパネルにフォーカス | ブランチリストにフォーカスを切り替え |
| `2` | 変更されたファイルパネルにフォーカス | ファイルリストにフォーカスを切り替え |
| `3` | Stashパネルにフォーカス | Stashリストにフォーカスを切り替え |
| `tab` | コンポーネントを順方向に切り替え | 次のパネルに移動 |
| `shift+tab` | コンポーネントを逆方向に切り替え | 前のパネルに移動 |

## リストナビゲーション

| キー | コンテキスト | アクション |
| :--- | :--- | :--- |
| `↑` または `k` | 任意のリストパネル | 上に移動 / 前のアイテムを選択 |
| `↓` または `j` | 任意のリストパネル | 下に移動 / 次のアイテムを選択 |
| `↑` または `k` | ポップアップ選択リスト | 前のオプションに移動 |
| `↓` または `j` | ポップアップ選択リスト | 次のオプションに移動 |

## 詳細パネルのスクロール

| キー | アクション | コンテキスト |
| :--- | :--- | :--- |
| `↑` または `k` | 上にスクロール | 詳細コンポーネント内 |
| `↓` または `j` | 下にスクロール | 詳細コンポーネント内 |
| `←` または `h` | 左にスクロール | 詳細コンポーネント内 |
| `→` または `l` | 右にスクロール | 詳細コンポーネント内 |

## ローカルブランチパネル

| キー | アクション | 場合 |
| :--- | :--- | :--- |
| `n` | 新しいブランチを作成 | ブランチ作成フローを開く |
| `enter` | 選択したブランチに切り替え | 必要に応じてブランチ切り替えポップアップを開く |
| `D` | 選択したブランチを削除 | ブランチを削除（確認なし） |
| `r` | 選択したブランチの名前を変更 | 名前変更入力ポップアップを開く |

## 変更されたファイルパネル

| キー | アクション | 場合 |
| :--- | :--- | :--- |
| `space` | ステージ/アンステージを切り替え | ファイルをステージとアンステージ間で切り替え |
| `enter` | ファイルの差分を表示 | 詳細パネルに差分を表示 |
| `r` | コンフリクトを解決 | コンフリクト解決オプションを開く（コンフリクトが発生しているファイルのみ表示） |
| `d` | 変更を破棄 | 破棄確認フローを開く |
| `s` | 選択したファイルをStash | Stashメッセージ入力ポップアップを開く |
| `S` | すべてのファイルをStash | Stashメッセージ入力ポップアップを開く |
| `c` | コミット | コミットポップアップを開く |
| `A` | コミットを修正 | 修正コミットポップアップを開く |

## Stashパネル

| キー | アクション | 場合 |
| :--- | :--- | :--- |
| `space` | Stashを適用 | Stashを適用するがリストには残す |
| `backspace` | Stashをポップ | Stashを適用してリストから削除 |
| `d` | Stashを削除 | Stashを完全に削除 |

## リモート操作

| キー | アクション | 場合 |
| :--- | :--- | :--- |
| `p` | プッシュ | プッシュフローを開く（リモート選択 → プッシュオプション） |
| `P` | プル | プルフローを開く（プルタイプ選択） |

## ポップアップキーバインディング

### テキスト入力ポップアップ
*適用対象: コミット、コミット修正、リモート追加、ブランチ作成、Stashメッセージ*

| キー | アクション | 備考 |
| :--- | :--- | :--- |
| `ctrl+e` | 送信 | フォームを送信（複数行テキストエリア用） |
| `enter` | 送信 | 単一行入力のみ（ブランチ名、Stashメッセージ、リモートフィールド） |
| `esc` | キャンセル | 保存せずにポップアップを閉じる |
| `tab` | 次のフィールド | 次の入力フィールドに移動（複数フィールドがある場合） |
| `shift+tab` | 前のフィールド | 前の入力フィールドに移動（複数フィールドがある場合） |

---

### 選択ポップアップ
*適用対象: ブランチタイプ、切り替えタイプ、プッシュタイプ、プルタイプ、リモート選択、破棄タイプ、コンフリクト解決タイプ*

| キー | アクション | 備考 |
| :--- | :--- | :--- |
| `↑` または `k` | 上に移動 | 前のオプションを選択 |
| `↓` または `j` | 下に移動 | 次のオプションを選択 |
| `enter` | 選択を確定 | 選択したオプションで続行 |
| `esc` | キャンセル | アクションなしでポップアップを閉じる |

---

### 出力/結果ポップアップ
*適用対象: プッシュ出力、プル出力、ブランチ切り替え出力*

| キー | アクション | 備考 |
| :--- | :--- | :--- |
| `esc` | ポップアップを閉じる | 出力ポップアップを閉じる |

---

### キーバインディングヘルプポップアップ

| キー | アクション | 備考 |
| :--- | :--- | :--- |
| `↑` または `k` | 上にスクロール | キーバインディングリストをスクロール |
| `↓` または `j` | 下にスクロール | キーバインディングリストをスクロール |
| `esc` | ヘルプを閉じる | ヘルプポップアップを閉じる |

## 詳細ビュー（右パネル）

| キー | アクション | 備考 |
| :--- | :--- | :--- |
| `esc` | リストに戻る | 詳細ビューを終了し、リストパネルにフォーカスを戻す |
| `↑` または `k` | 上にスクロール | 差分コンテンツを上にスクロール |
| `↓` または `j` | 下にスクロール | 差分コンテンツを下にスクロール |
| `←` または `h` | 左にスクロール | 差分コンテンツを左にスクロール |
| `→` または `l` | 右にスクロール | 差分コンテンツを右にスクロール |

## まとめ

- **`* [!!]`** キーバインディングはポップアップ内を含めてどこでも機能
- **`*`** キーバインディングはグローバルに機能するがポップアップが開いている時は機能しない
- **コンテキスト固有のキーバインディング**はそれぞれのパネルでのみ機能
- **ポップアップキーバインディング**はポップアップタイプ（テキスト入力 vs 選択 vs 出力）に依存
- **`esc`**はポップアップを閉じるまたは詳細ビューを終了する普遍的な方法
